[gd_scene load_steps=67 format=3 uid="uid://dmt2x14lxd0o5"]

[ext_resource type="Script" uid="uid://ddtoo4gfinv1b" path="res://enemies/enemy_states/enemy_controller.gd" id="1_ucnps"]
[ext_resource type="Texture2D" uid="uid://bx6cr7aa2ob60" path="res://enemies/skeleton/Skeleton enemy.png" id="2_h4q8b"]
[ext_resource type="Script" uid="uid://c71w3orp4rv71" path="res://core/custom_hurt_box_enemy.gd" id="3_jrr68"]
[ext_resource type="Script" uid="uid://oh6appk8t360" path="res://core/state_machine.gd" id="4_6l4ba"]
[ext_resource type="Script" uid="uid://b1u1246plg80p" path="res://core/custom_hit_box.gd" id="5_ub5sy"]
[ext_resource type="Script" uid="uid://trmwdnq8sifh" path="res://enemies/enemy_factory/enemy_healthbar.gd" id="6_bqddb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jj1k"]
size = Vector2(23.5, 46.8912)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_slcon"]
size = Vector2(153.179, 63.2643)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybkpd"]
atlas = ExtResource("2_h4q8b")
region = Rect2(768, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjy87"]
atlas = ExtResource("2_h4q8b")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bufg"]
atlas = ExtResource("2_h4q8b")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhyvq"]
atlas = ExtResource("2_h4q8b")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoo18"]
atlas = ExtResource("2_h4q8b")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_axxec"]
atlas = ExtResource("2_h4q8b")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct5ms"]
atlas = ExtResource("2_h4q8b")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_drsv4"]
atlas = ExtResource("2_h4q8b")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_riuq3"]
atlas = ExtResource("2_h4q8b")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_es8qe"]
atlas = ExtResource("2_h4q8b")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e564"]
atlas = ExtResource("2_h4q8b")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4nc8"]
atlas = ExtResource("2_h4q8b")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_583g5"]
atlas = ExtResource("2_h4q8b")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xsdm"]
atlas = ExtResource("2_h4q8b")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7cdn"]
atlas = ExtResource("2_h4q8b")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi0qw"]
atlas = ExtResource("2_h4q8b")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym5ls"]
atlas = ExtResource("2_h4q8b")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f47vg"]
atlas = ExtResource("2_h4q8b")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfshu"]
atlas = ExtResource("2_h4q8b")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrkgk"]
atlas = ExtResource("2_h4q8b")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ojv4"]
atlas = ExtResource("2_h4q8b")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgntd"]
atlas = ExtResource("2_h4q8b")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gai4p"]
atlas = ExtResource("2_h4q8b")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6und"]
atlas = ExtResource("2_h4q8b")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b7ve"]
atlas = ExtResource("2_h4q8b")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2orx"]
atlas = ExtResource("2_h4q8b")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpueh"]
atlas = ExtResource("2_h4q8b")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uh42"]
atlas = ExtResource("2_h4q8b")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mth33"]
atlas = ExtResource("2_h4q8b")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnttp"]
atlas = ExtResource("2_h4q8b")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_11muo"]
atlas = ExtResource("2_h4q8b")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qedco"]
atlas = ExtResource("2_h4q8b")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngthh"]
atlas = ExtResource("2_h4q8b")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lyh8"]
atlas = ExtResource("2_h4q8b")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjgel"]
atlas = ExtResource("2_h4q8b")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oha0p"]
atlas = ExtResource("2_h4q8b")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhvsy"]
atlas = ExtResource("2_h4q8b")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c4sh"]
atlas = ExtResource("2_h4q8b")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lflm"]
atlas = ExtResource("2_h4q8b")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_778qi"]
atlas = ExtResource("2_h4q8b")
region = Rect2(704, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mdjv"]
atlas = ExtResource("2_h4q8b")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g65th"]
atlas = ExtResource("2_h4q8b")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7t1f"]
atlas = ExtResource("2_h4q8b")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8164"]
atlas = ExtResource("2_h4q8b")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qddmj"]
atlas = ExtResource("2_h4q8b")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmkep"]
atlas = ExtResource("2_h4q8b")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wxxf"]
atlas = ExtResource("2_h4q8b")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n12j"]
atlas = ExtResource("2_h4q8b")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tymc5"]
atlas = ExtResource("2_h4q8b")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yccg4"]
atlas = ExtResource("2_h4q8b")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_38op3"]
atlas = ExtResource("2_h4q8b")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_th1f6"]
atlas = ExtResource("2_h4q8b")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_icyoc"]
atlas = ExtResource("2_h4q8b")
region = Rect2(768, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jpueh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybkpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjy87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bufg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhyvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoo18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axxec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct5ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drsv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riuq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es8qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e564")
}],
"loop": false,
"name": &"appear",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4nc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_583g5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xsdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7cdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi0qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym5ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f47vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfshu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrkgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ojv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgntd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gai4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6und")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b7ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2orx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpueh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uh42")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mth33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnttp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11muo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qedco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngthh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lyh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjgel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oha0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhvsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c4sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lflm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_778qi")
}],
"loop": true,
"name": &"move",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mdjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g65th")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7t1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8164")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qddmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmkep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wxxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n12j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tymc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yccg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38op3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th1f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icyoc")
}],
"loop": false,
"name": &"vanish",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d6rty"]
radius = 4.0
height = 34.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qbayn"]
size = Vector2(15.0445, 67.4958)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7jj1k"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0.66, 0.308, 0, 1)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rr3aj"]
bg_color = Color(0.704027, 0, 0.175111, 1)
border_color = Color(0, 0.490196, 0.396078, 0)

[node name="Skeleton_2" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 128
script = ExtResource("1_ucnps")
health = 70
speed = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1.5, 6)
scale = Vector2(0.646936, 1.05505)
shape = SubResource("RectangleShape2D_7jj1k")

[node name="ChasingArea" type="Area2D" parent="."]
visible = false
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChasingArea"]
position = Vector2(-0.500008, 0)
scale = Vector2(2.67704, 2.9136)
shape = SubResource("RectangleShape2D_slcon")

[node name="AttackingArea" type="Area2D" parent="."]
visible = false
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackingArea"]
position = Vector2(11.5, 8.77828)
scale = Vector2(0.0870289, 0.544437)
shape = SubResource("RectangleShape2D_slcon")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(11.602, 1.658, 0, 1)
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_jpueh")
animation = &"appear"
frame = 10
frame_progress = 1.0

[node name="CustomHurtBox" type="Area2D" parent="AnimatedSprite2D"]
visible = false
collision_layer = 8
collision_mask = 4
script = ExtResource("3_jrr68")
metadata/_custom_type_script = "uid://c71w3orp4rv71"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/CustomHurtBox"]
light_mask = 0
visibility_layer = 2
position = Vector2(-0.75, -0.75)
shape = SubResource("CapsuleShape2D_d6rty")
debug_color = Color(0.922626, 0, 0.262845, 0.42)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_6l4ba")

[node name="CustomHitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2
script = ExtResource("5_ub5sy")
damage = 5
metadata/_custom_type_script = "uid://b1u1246plg80p"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CustomHitBox"]
light_mask = 4
visibility_layer = 2
position = Vector2(9.01574, 3.72543)
rotation = -3.14159
scale = Vector2(1.33668, -0.82794)
shape = SubResource("RectangleShape2D_qbayn")
disabled = true
debug_color = Color(0.994338, 2.31028e-06, 0.553273, 0.675)

[node name="ProgressBar" type="ProgressBar" parent="." node_paths=PackedStringArray("enemy")]
texture_filter = 1
offset_left = -15.0
offset_top = -42.0
offset_right = 15.0
offset_bottom = -36.0
scale = Vector2(1.3187, 1.29158)
theme_override_styles/background = SubResource("StyleBoxFlat_7jj1k")
theme_override_styles/fill = SubResource("StyleBoxFlat_rr3aj")
max_value = 70.0
step = 1.0
value = 1.0
show_percentage = false
script = ExtResource("6_bqddb")
enemy = NodePath("..")

[node name="RichTextLabel" type="RichTextLabel" parent="ProgressBar"]
texture_filter = 1
layout_mode = 0
offset_left = -1.5
offset_top = -9.0
offset_right = 184.5
offset_bottom = 31.0
scale = Vector2(0.213543, 0.311619)
text = "Fierce Death Stalker"
fit_content = true
scroll_active = false
autowrap_mode = 0
visible_characters_behavior = 3

[connection signal="body_entered" from="ChasingArea" to="." method="_on_chasing_area_body_entered"]
[connection signal="body_exited" from="ChasingArea" to="." method="_on_chasing_area_body_exited"]
[connection signal="body_entered" from="AttackingArea" to="." method="_on_attacking_area_body_entered"]
[connection signal="body_exited" from="AttackingArea" to="." method="_on_attacking_area_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
